--- a/src/main.css
+++ b/src/main.css
@@ -73,6 +73,10 @@ input, textarea {
 button {
   @apply bg-green-900 text-white p-2 rounded;
 }
+button[disabled] {
+  @apply bg-gray-400;
+}
+
 .bg-white {
   background-color: #fff;
 }
